--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+u<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -46,7 +46,7 @@
                 <p>I'm a passionate Rust,C,Python,Js+DSA OS CN DLA |  Wikipedia Editor | Animaker | Zero-Day Vulnerability = 🔓 💣 🕵️‍♂️ 💻 🐛 ⚠️ | QComp Lover. You Don't know All About me and Myself. </p>
                 <div class="btn-group">
                     <a href="#projects" class="btn">View My Work</a>
-                    <a href="https://drive.google.com/uc?export=download&id=1LOhBzDIATfLpO6yEMPcDHSaGscBeDczr" class="btn btn-outline" id="downloadCV">Download CV</a>
+                    <a href="https://drive.google.com/file/d/13YhY3xkxXtdAvQCZ_6EijuIr9oQAlCur/view?usp=drive_link" class="btn btn-outline" id="downloadCV">Download CV</a>
                 </div>
             </div>
             <div class="hero-image">
